--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -1,4 +1,4 @@
-name: Checks
+name: Quality
 
 on:
   push:
@@ -56,6 +56,6 @@ jobs:
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@master
         with:
-          args: deploy
+          args: deploy development
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
