--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -56,6 +56,6 @@ jobs:
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@master
         with:
-          args: deploy --only hosting:development
+          args: hosting:channel:deploy development
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
