--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,7 +41,7 @@ jobs:
 
   deploy:
     name: Deploy
-    needs: build
+    needs: [quality, build]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout sources
